# aoc-2021

./: .pdm.toml  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
src/day_01/: a.py  b.py  parser.py  shared.py  solver.py
src/day_02/: a.py  b.py  models.py  parser.py  shared.py  solver.py
src/day_03/: a.py  b.py  parser.py  shared.py  solver.py
src/day_04/: a.py  b.py  board.py  parser.py  shared.py  solver.py
src/day_05/: a.py  b.py  parser.py  shared.py  solver.py
src/day_06/: a.py  b.py  parser.py  solver.py
src/day_07/: a.py  b.py  solver.py
src/day_08/: a.py  b.py  models.py  parser.py  solver.py
src/day_09/: a.py  b.py  models.py  parser.py  solver.py
src/day_10/: a.py  b.py  solver.py
src/day_11/: a.py  b.py  models.py  parser.py  solver.py
src/day_12/: a.py  b.py  models.py  parser.py  solver.py
src/day_13/: a.py  b.py  models.py  parser.py  solver.py
src/day_14/: a.py  b.py  models.py  parser.py  solver.py
src/day_15/: a.py  b.py  parser.py  solver.py
src/day_16/: a.py  b.py  helpers.py  models.py  parser.py  solver.py
src/day_17/: a.py  b.py  models.py  parser.py  solver.py
src/day_18/: a.py  b.py  parser.py  solver.py
src/day_19/: a.py  b.py  models.py  parser.py  solver.py
src/day_20/: a.py  b.py  models.py  parser.py  solver.py
src/day_21/: a.py  b.py  models.py  parser.py  solver.py
src/day_22/: a.py  b.py  models.py  parser.py  solver.py
src/day_23/: a.py  b.py  models.py  parser.py  solver.py
src/day_24/: a.py  b.py  input_annotated.txt  (+4 more)
utils/: create_files.py  file_data.py  submit.py
(+95 files in other folders)
