[tool.poetry]
name = "advent-of-code-2021-python"
version = "0.1.0"
description = "Advent of Code 2021 in Python"
authors = ["Tyler Hoffman <tyler.c.hoffman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.910"
black = "^21.11b1"
parameterized = "^0.8.1"
advent-of-code-data = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
